tests/ui/errors/span-format_args-issue-140578.stderr
error[E0282]: type annotations needed
  --> $DIR/span-format_args-issue-140578.rs:2:28
   |
LL |   print!("{:?} {a} {a:?}", [], a = 1 + 1);
   |                            ^^ cannot infer type
   |
   = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> $DIR/span-format_args-issue-140578.rs:7:30
   |
LL |   println!("{:?} {a} {a:?}", [], a = 1 + 1);
   |                              ^^ cannot infer type
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> $DIR/span-format_args-issue-140578.rs:12:35
   |
LL |   println!("{:?} {:?} {a} {a:?}", [], [], a = 1 + 1);
   |                                   ^^ cannot infer type
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> $DIR/span-format_args-issue-140578.rs:17:41
   |
LL |   println!("{:?} {:?} {a} {a:?} {b:?}", [], [], a = 1 + 1, b = []);
   |                                         ^^ cannot infer type
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> $DIR/span-format_args-issue-140578.rs:26:9
   |
LL |         [],
   |         ^^ cannot infer type
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0282`.
